welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: illegal start of simple expression
  var nbBiscuit : Int = 0 ;
  ^Poucet:2: error: ')' expected but ';' found.
  var nbBiscuit : Int = 0 ;
                          ^Poucet:3: error: 'while' expected but 'for' found.
  for(pas <- 1 to 5) {if (estSurBiscuit()) {nbBiscuit() = nbBiscuit +1} ; avance() ; } ;
  ^Poucet:3: error: '(' expected but ';' found.
  for(pas <- 1 to 5) {if (estSurBiscuit()) {nbBiscuit() = nbBiscuit +1} ; avance() ; } ;
                                                                                       ^Poucet:5: error: illegal start of statement
)
^